# Rust-api

./: Cargo.toml  README.md  diesel.toml  rust.dockerfile
migrations/2025-02-18-115554_create_responses/: up.sql
migrations/2025-02-18-115554_create_surveys/: up.sql
migrations/2025-02-25-234957_survey_migration/: down.sql  up.sql
migrations/2025-02-26-023106_populate_surveys/: down.sql  up.sql
migrations/2025-02-26-034312_convert_user_id_int_to_uuid/: up.sql
src/: db.rs  main.rs  schema.rs
src/helper/: tools.rs
src/middleware/: auth_middlewares.rs
src/models/: claims.rs  login_model.rs  mod.rs  register_model.rs  surveys.rs  user.rs
src/routes/: login.rs  register.rs
src/services/: db_service.rs  db_user_service.rs  mod.rs  survey_ws.rs
